test: 테스트 코드 전수 복구 및 대규모 프로덕션/테스트 결함 식별
- 리팩토링 중 유실된 26개 통합 테스트 메서드 강제 복구 (현재 27개 테스트 실패 상태)
- [치명적 결함] Vocabulary, Word, Definition 등 대다수 생성/수정 API의 null 데이터 반환으로 인한 전방위적 NPE(NullPointerException) 발생 확인
- [보안 결함] 유효하지 않은 사용자 ID가 포함된 서명된 토큰이 보안 필터를 통과하여 401이 아닌 200을 반환하는 정합성 위반 확인
- [예외 처리 결함] DB 제약 조건 위반 시 공통 응답 규격이 파손되어 클라이언트에서 메시지 추출이 불가능한 현상 식별
- [정합성 오류] 실제 프로덕션의 닉네임/비밀번호 유효성 메시지와 테스트 코드의 기대값이 불일치하는 다수의 케이스 확인
- [테스트 오류] JwtProviderTest 등에서 Mockito 매처(anyString)를 오용하여 테스트 자체가 실행되지 않던 구문 오류 수정
- 모든 모델의 record 전환에 따른 테스트 코드의 구형 Getter/Builder 호출부 일괄 강제 수정